02. Kubernetes/Day04 YMLs/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: app1
          image: kastrov/app1-image:latest
          ports: 
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-service  #this service name will be referenced in the ingress yml file
spec:
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
